--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 DATABASE_URL=jdbc:postgresql://localhost:5432/lostpets
 DATABASE_USERNAME=yourusername
 DATABASE_PASSWORD=yourpassword
+JWT_SECRET=secret
