--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,10 @@ DATABASE_URL=jdbc:postgresql://localhost:5432/lostpets
 DATABASE_USERNAME=yourusername
 DATABASE_PASSWORD=yourpassword
 JWT_SECRET=secret
+
+spring.mail.host=smtp.example.com
+spring.mail.port=587
+spring.mail.username=your-email@example.com
+spring.mail.password=your-email-password
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
