--- a/.env.example
+++ b/.env.example
@@ -3,9 +3,9 @@ DATABASE_USERNAME=yourusername
 DATABASE_PASSWORD=yourpassword
 JWT_SECRET=secret
 
-spring.mail.host=smtp.example.com
-spring.mail.port=587
-spring.mail.username=your-email@example.com
-spring.mail.password=your-email-password
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
+SPRING.MAIL.HOST=smtp.example.com
+SPRING.MAIL.PORT=587
+SPRING.MAIL.USERNAME=your-email@example.com
+SPRING.MAIL.PASSWORD=your-email-password
+SPRING.MAIL.PROPERTIES.MAIL.SMTP.AUTH=true
+SPRING.MAIL.PROPERTIES.MAIL.SMTP.STARTTLS.ENABLE=true
